// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBadge should render correctly 1`] = `
<span
  className="bpk-badge "
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "centered" 1`] = `
<span
  className="bpk-badge  bpk-badge--centered"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "left" 1`] = `
<span
  className="bpk-badge  bpk-badge--docked-left"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "right" 1`] = `
<span
  className="bpk-badge  bpk-badge--docked-right"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with an icon 1`] = `
<span
  className="bpk-badge "
>
  <svg
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.8 20.1l.6-.6c.2-.2.3-.5.2-.8l-2.2-9.3 4.1-4.2c.5-.5.5-1.3 0-1.9-.5-.5-1.4-.5-1.9 0l-4.2 4.1-9.1-2c-.3-.1-.6 0-.8.2l-.6.6c-.4.4-.3 1.1.2 1.4l7.2 3.2-3.7 3.7-2.3-.8c-.3-.1-.6 0-.8.2L3 15.2l4.2 1.6L8.8 21l1.3-1.5c.2-.2.3-.6.2-.8l-.8-2.3 3.7-3.7 3.2 7.2c.3.5 1 .6 1.4.2z"
    />
  </svg>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="destructive" 1`] = `
<span
  className="bpk-badge bpk-badge--destructive"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="inverse" 1`] = `
<span
  className="bpk-badge bpk-badge--inverse"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="light" 1`] = `
<span
  className="bpk-badge bpk-badge--light"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="outline" 1`] = `
<span
  className="bpk-badge bpk-badge--outline"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="success" 1`] = `
<span
  className="bpk-badge bpk-badge--success"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="warning" 1`] = `
<span
  className="bpk-badge "
>
  Promociando
</span>
`;
